# cookiecutter-python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/: FUNDING.yml
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/docs_sources/mkdocs/: index.md  mkdocs.yml
{{cookiecutter.project_name}}/docs_sources/sphinx/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: __init__.py
