[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pep562 = { version = "^1", python = "<3.7" }
importlib-metadata = { version = "*^4", python = "<3.8" }

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
safety = "^1.8"
isort = "^5.3"
flake8-bugbear = "^19.8"
black = {version = "*", allow-prereleases = true}
mypy = "~0.812"
ipython = "^7.7"
pytest = "^6.0"
pytest-cov = "^2.7"
pep8-naming = "^0.8.2"
cruft = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = [ "{{ cookiecutter.module_name }}", "tests" ]
line_length = 160
multi_line_output = 3

[tool.cruft]
skip = [
  "{{ cookiecutter.module_name }}/__init__.py",
  "tests",
  "docs/",
  "pyproject.toml",
  "CHANGELOG.md",
  "README.md",
  ".flake8",
  ".git",
]
